--- a/firebase.json
+++ b/firebase.json
@@ -5,16 +5,14 @@
     "runtime": "nodejs16"
   },
   "hosting": {
-    "public": "frontend/build",
+    "public": "y",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [{
-      "source": "/api/**",
-      "function": "api"
-    }, {
+    "rewrites": [
+      {
         "source": "**",
         "destination": "/index.html"
       }
